--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "description": "hexlet php-package",
   "license": "MIT",
   "scripts": {
-    "test": "phpunit tests"
+    "test": "phpunit tests",
+    "phpcs": "phpcs"
   },
   "autoload": {
     "psr-4": {
@@ -31,7 +32,7 @@
   },
   "require-dev": {
     "psy/psysh": "@stable",
-    "phpstan/phpstan-phpunit": "^1.3",
+    "phpstan/phpstan-phpunit": "*",
     "phpstan/extension-installer": "^1.3",
     "symfony/var-dumper": "^7.0",
     "phpunit/phpunit": "^11.0",
